@@ -618,6 +618,8 @@ case 'picture':
 
     $uploaded_pic = $dest_dir . $picture_name;
 
+    CPGPluginAPI::action('upload_html_pre_move', $superCage->files->getRaw("/userpicture/tmp_name"));
+
     // Move the picture into its final location
     // getRaw is safe here since this filename is generated by the server
     if (!move_uploaded_file($superCage->files->getRaw("/userpicture/tmp_name"), $uploaded_pic)) {
