@@ -23,6 +23,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-10-14 [A] Added plugin hooks 'after_edit_file', 'upload_html_pre_move' and 'upload_swf_pre_move' (thread ID 60896) {eenemeenemuu}
 2010-10-14 [C] Added additional submit button on top of 'Edit files' form (thread ID 67563) {eenemeenemuu}
 2010-10-13 [B] Use IPTC headline instead of IPTC title as picture title according to docs (thread ID 61380) {eenemeenemuu}
 2010-10-13 [B] Fixed implementation of plugin hook 'ip_information' (thread ID 67187) {eenemeenemuu}
